--- a/_layouts/styleguides.html
+++ b/_layouts/styleguides.html
@@ -97,7 +97,108 @@
         </div>
       </div>
     </div>
+    <div class="col">
+      <h4>Buttons</h4>
+      <div class="row">
+        <div class="col"><button class="btn">Send comment</button></div>
+        <div class="col"><button class="btn">Send comment</button></div>
+        <div class="col"><button class="btn disabled">Send comment</button></div>
+      </div>
+      <div class="row">
+        <div class="col"><button class="btn btn-add">Add to portfolio</button></div>
+        <div class="col"><button class="btn btn-add">Add to portfolio</button></div>
+        <div class="col"><button class="btn btn-add disabled">Add to portfolio</button></div>
+      </div>
+      <div class="row">
+        <div class="col"><button class="btn btn-view">View all</button></div>
+        <div class="col"><button class="btn btn-view">View all</button></div>
+        <div class="col"><button class="btn btn-view disabled">View all</button></div>
+      </div>
+    </div>
+  </div><!-- end color and buttons -->
+  <div class="row fonts">
+    <div class="col">
+      <h1>Lorem ipsum dolor sit amet</h1>
+      <h2>Lorem ipsum dolor sit amet</h2>
+      <p>consectetur adipisicing elit, sed do </p>
+    </div>
+    <div class="col"> 
+      <h2>Lorem ipsum dolor sit amet</h2>
+      <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+  </div><!-- end fonts -->
+  <div>
+    <h4>Navigation</h4>
+     <div class="top-menu">
+        <nav class="top-menu__navbar">
+          <ul>
+            <li class="top-menu__item"><a href="#">Growing</a></li>
+            <li class="top-menu__item"><a href="#">Falling</a></li>
+            <li class="top-menu__item"><a href="#">Arbitrage</a></li>
+            <li class="top-menu__item"><a href="#">Exchanges</a></li>
+            <li class="top-menu__item"><a href="#">Whatchlist</a></li>
+            <li class="top-menu__item"><a href="#">Forum</a></li>
+            <li class="top-menu__item"><a href="#">Portfolio</a></li>
+            <li class="top-menu__item"><a href="#">Alerts</a></li>
+          </ul>
+        </nav>
+      </div><!-- end top menu -->
   </div>
-</div>
+  <div class="row">
+    <div class="col">
+      <p>Tags
+      <a class="tag" href="#"># tag</a>
+      <a class="tag" href="#"># longtag</a></p>
+    </div>
+    <div class="col">
+      <p>Zoom отдельно в плагине графиков</p>
+    </div>
+  </div><!-- end tags and zoom -->
+  <ul class="list">
+    <li class="list__item"><img class="list__item__icon" src="img/bitcoin.png"><span class="list__item__short-name">BTC</span><span>Bitcoin</span></li>
+    <li class="list__item"><img class="list__item__icon" src="img/ark.png"><span class="list__item__short-name">ARK</span><span>Arkcoin</span></li>
+    <li class="list__item"><img class="list__item__icon" src="img/bitcoin-gold.png"><span class="list__item__short-name">BTG</span><span>Bitcoin Gold</span></li>
+    <li class="list__item"><img class="list__item__icon" src="img/bitcoin.png"><span class="list__item__short-name">BTC</span><span>Bitcoin</span></li>
+    <li class="list__item"><img class="list__item__icon" src="img/bitcoin.png"><span class="list__item__short-name">BTC</span><span>Bitcoin</span></li>
+  </ul>
+  <div>
+    <h4>Tables</h4>
+    <h4>Пока прежняя вёрстка</h4>
+  </div>
+
+  <div class="forms">
+    <input class="form-input" type="email" name="email" placeholder="Email" style="width: 50%;">
+    <textarea class="form-comment" type="text" name="text" placeholder="Lorem ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </textarea>
+  </div>
+
+  <div>
+    <h4>Mobile</h4>
+    <p>Пока прежняя вёрстка</p>
+    <p><a href="#">Ссылка</a>
+      <a href="#">Ссылка</a></p>
+  </div>
+
+</div><!-- end main content -->
+<footer class="footer">   
+    <div class="container">
+      <div class="banner">
+        <div class="banner__content">
+          <h1>BANNER</h1>
+        </div>
+      </div>
+      <nav class="footer-menu">
+        <ul>
+          <li class="footer-menu__copyright">&copy; 2018 AllCoinStat</li>
+          <li class="footer-menu__item"><a href="#">About</a></li>
+          <li class="footer-menu__item"><a href="#">About</a></li>
+          <li class="footer-menu__item"><a href="#">About</a></li>
+          <li class="footer-menu__item"><a href="#">About</a></li>
+        </ul>
+      </nav>  
+    </div>
+  </footer>
+</div><!-- end app -->
+<script src="js/vue.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
