--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
               <a class="info-block__item__value" href="#">$150B</a>
             </li>
             <li class="info-block__log"><a href="#" @click="open('signIn')">sign in</a> / <a href="#" @click="open('signUp')">sign up</a></li>
-            <input class="form-input info-block__input" type="email" name="email" placeholder="Search coins" />
+            <input class="form-input info-block__input" type="search" name="search" placeholder="Search coins" />
           </ul>
         </nav>
       </div>
