--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -55,7 +55,12 @@ h2 {
 h3 {
   margin: 0;
 }
-h4,
+h4 {
+  font-size: calc((20 / 16) * 1rem);
+  margin: 0 0 calc((22 / 16) * 1rem);
+  color: var(--black-color);
+  font-weight: bold;
+}
 h5,
 h6 {
   margin: 0 0 .5rem 0;
