--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -98,7 +98,8 @@ nav > ul {
   align-items: center;
 }
 .open-modal {
-  overflow: hidden;
+  position: fixed;
+  width: 100%;
 }
 .fade-enter-active,
 .fade-leave-active {
