--- a/src/assets/css/tooltip.css
+++ b/src/assets/css/tooltip.css
@@ -4,7 +4,7 @@
 }
 .tooltip .tooltip-inner {
   background: #fff;
-  box-shadow: 0 5px 15px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.2);
   padding: 14px;
   border-radius: 5px;
 }
@@ -21,11 +21,11 @@
   margin-bottom: 5px;
 }
 .tooltip[x-placement^="top"] .tooltip-arrow {
-  border-width: 5px 5px 0 5px;
+  border-width: 15px 12px 0 12px;
   border-left-color: transparent !important;
   border-right-color: transparent !important;
   border-bottom-color: transparent !important;
-  bottom: -5px;
+  bottom: -15px;
   left: calc(50% - 5px);
   margin-top: 0;
   margin-bottom: 0;
@@ -34,11 +34,11 @@
   margin-top: 5px;
 }
 .tooltip[x-placement^="bottom"] .tooltip-arrow {
-  border-width: 0 5px 5px 5px;
+  border-width: 0 12px 15px 12px;
   border-left-color: transparent !important;
   border-right-color: transparent !important;
   border-top-color: transparent !important;
-  top: -5px;
+  top: -15px;
   left: calc(50% - 5px);
   margin-top: 0;
   margin-bottom: 0;
@@ -70,7 +70,7 @@
   margin-right: 0;
 }
 .tooltip.popover .popover-arrow {
-  border-color: #f9f9f9;
+  border-color: #fff;
 }
 .tooltip[aria-hidden='true'] {
   visibility: hidden;
